src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AB2__ABListPrice__c</fullName>
        <label>ABListPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementName__c</fullName>
        <label>ABMediaElementName</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABPriceTypeMapping__c</fullName>
        <description>Maps From the PriceBook2Id to an AdBook PriceTypeId (CPM, Flat Rate, etc...). Ideally this would be a custom field on PriceBookEntry, but that isn&apos;t currently supported.
Set via AdBook Admin &gt; Map Price Book &gt; [Get Position Pricing List]</description>
        <inlineHelpText>Not intended for user input. Maps from the Price book Id to the AdBook Price Type Id to determine if the PricebookEntry is CPM, Flat Rate, etc...</inlineHelpText>
        <label>AdBook PriceType Mapping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0=0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__Is_AdBook_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AdBook Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__MediaElementID__c</fullName>
        <externalId>true</externalId>
        <label>ABMediaElementID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__MediaElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABMediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__Path__c</fullName>
        <label>ABPath</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB_DSM_Product_ID__c</fullName>
        <formula>Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB - DSM Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Price__c</fullName>
        <label>Annual Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSM_Product_Name__c</fullName>
        <label>DSM Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Available__c</fullName>
        <label>Data Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doubleclick_Loaded_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doubleclick Loaded Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_L_Code__c</fullName>
        <label>G/L Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albuquerque-37</fullName>
                </value>
                <value>
                    <fullName>Atlanta-79</fullName>
                </value>
                <value>
                    <fullName>Austin-45</fullName>
                </value>
                <value>
                    <fullName>Bay Area-07</fullName>
                </value>
                <value>
                    <fullName>Boise-36</fullName>
                </value>
                <value>
                    <fullName>California-Full State-09</fullName>
                </value>
                <value>
                    <fullName>Carolinas-74</fullName>
                </value>
                <value>
                    <fullName>Central California-05</fullName>
                </value>
                <value>
                    <fullName>Central Florida-81</fullName>
                </value>
                <value>
                    <fullName>Charlotte-75</fullName>
                </value>
                <value>
                    <fullName>Chicago-71</fullName>
                </value>
                <value>
                    <fullName>Cincinnati-91</fullName>
                </value>
                <value>
                    <fullName>Cleveland-92</fullName>
                </value>
                <value>
                    <fullName>Colorado Springs-12</fullName>
                </value>
                <value>
                    <fullName>Columbus-93</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Worth-47</fullName>
                </value>
                <value>
                    <fullName>Denver-11</fullName>
                </value>
                <value>
                    <fullName>Desert / Mountain-10</fullName>
                </value>
                <value>
                    <fullName>Detroit-66</fullName>
                </value>
                <value>
                    <fullName>Florida-80</fullName>
                </value>
                <value>
                    <fullName>Hawaii-15</fullName>
                </value>
                <value>
                    <fullName>Houston-48</fullName>
                </value>
                <value>
                    <fullName>Indianapolis-72</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-04</fullName>
                </value>
                <value>
                    <fullName>LA Coastal-02</fullName>
                </value>
                <value>
                    <fullName>Las Vegas-21</fullName>
                </value>
                <value>
                    <fullName>Louisville-70</fullName>
                </value>
                <value>
                    <fullName>MidAtlantic-50</fullName>
                </value>
                <value>
                    <fullName>Midwest-64</fullName>
                </value>
                <value>
                    <fullName>Naples/Ft. Meyers-86</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Product_ID__c</fullName>
        <label>Legacy Product ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MLP__c</fullName>
        <label>MLP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>480</fullName>
                </value>
                <value>
                    <fullName>520</fullName>
                </value>
                <value>
                    <fullName>640</fullName>
                </value>
                <value>
                    <fullName>680</fullName>
                </value>
                <value>
                    <fullName>720</fullName>
                </value>
                <value>
                    <fullName>760</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1080</fullName>
                </value>
                <value>
                    <fullName>1112</fullName>
                </value>
                <value>
                    <fullName>1115</fullName>
                </value>
                <value>
                    <fullName>1116</fullName>
                </value>
                <value>
                    <fullName>1118</fullName>
                </value>
                <value>
                    <fullName>1120</fullName>
                </value>
                <value>
                    <fullName>1158</fullName>
                </value>
                <value>
                    <fullName>1200</fullName>
                </value>
                <value>
                    <fullName>1202</fullName>
                </value>
                <value>
                    <fullName>1203</fullName>
                </value>
                <value>
                    <fullName>1204</fullName>
                </value>
                <value>
                    <fullName>1205</fullName>
                </value>
                <value>
                    <fullName>1206</fullName>
                </value>
                <value>
                    <fullName>1207</fullName>
                </value>
                <value>
                    <fullName>1208</fullName>
                </value>
                <value>
                    <fullName>1209</fullName>
                </value>
                <value>
                    <fullName>1210</fullName>
                </value>
                <value>
                    <fullName>1211</fullName>
                </value>
                <value>
                    <fullName>1212</fullName>
                </value>
                <value>
                    <fullName>1213</fullName>
                </value>
                <value>
                    <fullName>1214</fullName>
                </value>
                <value>
                    <fullName>1215</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abbeville, LA</fullName>
                </value>
                <value>
                    <fullName>Aberdeen, WA</fullName>
                </value>
                <value>
                    <fullName>Abilene, TX</fullName>
                </value>
                <value>
                    <fullName>Ada, OK</fullName>
                </value>
                <value>
                    <fullName>Adrian, MI</fullName>
                </value>
                <value>
                    <fullName>Akron, OH</fullName>
                </value>
                <value>
                    <fullName>Alamogordo, NM</fullName>
                </value>
                <value>
                    <fullName>Albany, GA</fullName>
                </value>
                <value>
                    <fullName>Albany-Lebanon, OR</fullName>
                </value>
                <value>
                    <fullName>Albany-Schenectady-Troy, NY</fullName>
                </value>
                <value>
                    <fullName>Albemarle, NC</fullName>
                </value>
                <value>
                    <fullName>Albert Lea, MN</fullName>
                </value>
                <value>
                    <fullName>Albertville, AL</fullName>
                </value>
                <value>
                    <fullName>Albuquerque, NM</fullName>
                </value>
                <value>
                    <fullName>Alexander City, AL</fullName>
                </value>
                <value>
                    <fullName>Alexandria, LA</fullName>
                </value>
                <value>
                    <fullName>Alexandria, MN</fullName>
                </value>
                <value>
                    <fullName>Alice, TX</fullName>
                </value>
                <value>
                    <fullName>Allegan, MI</fullName>
                </value>
                <value>
                    <fullName>Allentown-Bethlehem-Easton, PA-NJ</fullName>
                </value>
                <value>
                    <fullName>Alma, MI</fullName>
                </value>
                <value>
                    <fullName>Altoona, PA</fullName>
                </value>
                <value>
                    <fullName>Altus, OK</fullName>
                </value>
                <value>
                    <fullName>Amarillo, TX</fullName>
                </value>
                <value>
                    <fullName>Americus, GA</fullName>
                </value>
                <value>
                    <fullName>Ames, IA</fullName>
                </value>
                <value>
                    <fullName>Amsterdam, NY</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Anderson, IN</fullName>
                </value>
                <value>
                    <fullName>Anderson, SC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <label>Market Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_County__c</fullName>
        <label>Market/County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <label>Market Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Sub-Market</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetroStudy_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MetroStudy Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meyers_Id2__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id2</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Counties_per_MSA__c</fullName>
        <description>For Property Record Pricing</description>
        <label># of Counties per MSA (Prop. Record)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Level__c</fullName>
        <label>Pricing Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Price by MSA</fullName>
                </value>
                <value>
                    <fullName>Property Record Pricing by County - Gold</fullName>
                </value>
                <value>
                    <fullName>Property Record Pricing by County - Platinum</fullName>
                </value>
                <value>
                    <fullName>Select Price by MSA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Property Record Pricing by MSA - Platinum</fullName>
                </value>
                <value>
                    <fullName>Property Record Pricing by MSA - Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductPicture__c</fullName>
        <formula>IMAGE(  URL_Picture__c  , &apos;Product Picture&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category2__c</fullName>
        <formula>IF( 
CONTAINS(Product_Type__c, &quot;Metrostudy&quot;), &quot;Metrostudy&quot;, 
IF( 
AND(CONTAINS(Product_Type__c, &quot;Marketing&quot;),Product_Type__c &lt;&gt; &quot;Strategic Marketing Services&quot;) , &quot;Marketing&quot;, 
IF( 
CONTAINS(Product_Type__c, &quot;Direct Mail List&quot;), &quot;Digital&quot;, 

CASE ( Product_Type__c , 
&quot;White Paper (Sponsor Supplied)&quot;, &quot;Digital&quot;, 
&quot;Webinar (Sponsor Supplied)&quot;, &quot;Digital&quot;, 
&quot;Virtual Event&quot;, &quot;Digital&quot;, 
&quot;Video (Sponsor Supplied)&quot;, &quot;Digital&quot;, 
&quot;Strategic Marketing Services&quot;, &quot;Digital&quot;, 
&quot;Roadblock&quot;, &quot;Digital&quot;, 
&quot;Product Spotlight Blast&quot;, &quot;Digital&quot;, 
&quot;Print&quot;, &quot;Print&quot;, 
&quot;Newsletter&quot;, &quot;Digital&quot;, 
&quot;newsletter&quot;, &quot;Digital&quot;, 
&quot;HWTV (Sponsor Supplied)&quot;, &quot;Digital&quot;, 
&quot;Email Promo Blast/Marketi&quot;, &quot;Digital&quot;, 
&quot;Email List Blast&quot;, &quot;Digital&quot;, 
&quot;Education&quot;, &quot;Digital&quot;, 
&quot;Digital Edition&quot;, &quot;Digital&quot;, 
&quot;Demand Generation&quot;, &quot;Digital&quot;, 
&quot;Customer Engagement Progr&quot;, &quot;Digital&quot;, 
&quot;Event Sponsorship&quot;, &quot;Event&quot;, 
&quot;Branded Event&quot;, &quot;Event&quot;, 
&quot;Custom Event&quot;, &quot;Event&quot;, 
&quot;Event Sponsorship (Custom)&quot;, &quot;Event&quot;, 
&quot;Education Event&quot;, &quot;Event&quot;, 
&quot;CPM&quot;,&quot;Digital&quot;, 
&quot;Standard CPM&quot;,&quot;Digital&quot;, 
&quot;Building Know-How JLC&quot;,&quot;Digital&quot;, 
&quot;Category Exclusive JLC&quot;,&quot;Digital&quot;, 
&quot;Consumer Specials&quot;,&quot;Digital&quot;, 
&quot;Dedicated Email&quot;,&quot;Digital&quot;, 
&quot;Newsletter Plus&quot;,&quot;Digital&quot;, 
&quot;Paid Promo Allocation&quot;,&quot;Digital&quot;, 
&quot;Run of Network&quot;,&quot;Digital&quot;, 
&quot;Targeted Sponsorship&quot;,&quot;Digital&quot;, 
&quot;SMS&quot;,&quot;Digital&quot;, 
&quot;Event&quot;,&quot;Event&quot;, 
&quot;Exhibitions Intercompany&quot;,&quot;Exhibitions&quot;, 
&quot;Direct Mail List&quot;,&quot;Digital&quot;, 
&quot;Standard CPM&quot;,&quot;Digital&quot;, 
&quot;Digital Field Guide Subscription&quot;,&quot;Digital&quot;, 
&quot;Digital Subscription&quot;,&quot;Digital&quot;, 
&quot;PSNDE&quot;,&quot;Digital&quot;, 
&quot;Pool &amp; Spa News Digital&quot;,&quot;Digital&quot;, 
&quot;Directory Listing&quot;,&quot;Digital&quot;, 
&quot;Events - Tradeshow&quot;,&quot;Event&quot;, 
&quot;Events - Branded&quot;,&quot;Event&quot;, 
&quot;Events - Corporate&quot;,&quot;Event&quot;, 
&quot;Back Copy Sales&quot;,&quot;Print&quot;, 
&quot; &quot; 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Model__c</fullName>
        <label>Product Charge Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Subcategory2__c</fullName>
        <formula>IF( 
CONTAINS( Name , &quot;CEU&quot;), &quot;Education&quot;, 

IF( 
CONTAINS (Name, &quot;Profile Nurturing&quot;), &quot;Demand Generation&quot;, 

IF( 
CONTAINS (Name, &quot;SMS Demand Generation&quot;), &quot;Demand Generation&quot;, 


IF( 
CONTAINS(Product_Type__c, &quot;Metrostudy&quot;), &quot;Metrostudy&quot;, 
IF( 
AND(CONTAINS(Product_Type__c, &quot;Marketing&quot;),Product_Type__c &lt;&gt; &quot;Strategic Marketing Services&quot;) , &quot;Marketing&quot;, 
IF( 
CONTAINS(Product_Type__c, &quot;Direct Mail List&quot;), &quot;Impressions/Branding&quot;, 

CASE ( Product_Type__c , 
&quot;White Paper (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Webinar (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Virtual Event&quot;,&quot;Demand Generation&quot;, 
&quot;Video (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Run of Network&quot;,&quot;Impressions/Branding&quot;, 
&quot;Stragetic Marketing Servi&quot;,&quot;SMS&quot;, 
&quot;Strategic Marketing Services&quot;,&quot;SMS&quot;, 
&quot;Roadblock&quot;,&quot;Impressions/Branding&quot;, 
&quot;Product Spotlight Blast&quot;,&quot;Impressions/Branding&quot;, 
&quot;Print&quot;,&quot;Print&quot;, 
&quot;Newsletter&quot;,&quot;Impressions/Branding&quot;, 
&quot;newsletter&quot;,&quot;Impressions/Branding&quot;, 
&quot;HWTV (Sponsor Supplied)&quot;,&quot;Impressions/Branding&quot;, 
&quot;Email Promo Blast/Marketi&quot;,&quot;Impressions/Branding&quot;, 
&quot;Email List Blast&quot;,&quot;Impressions/Branding&quot;, 
&quot;Education&quot;,&quot;Demand Generation&quot;, 
&quot;Digital Edition&quot;,&quot;Impressions/Branding&quot;, 
&quot;Customer Engagement Progr&quot;,&quot;Demand Generation&quot;, 
&quot;Demand Generation&quot;,&quot;Demand Generation&quot;, 
&quot;CPM&quot;, &quot;Impressions/Branding&quot;, 
&quot;Standard CPM&quot;, &quot;Impressions/Branding&quot;, 
&quot;Consumer Specials&quot;,&quot;Impressions/Branding&quot;, 
&quot;Branded Event&quot;,&quot;Events&quot;, 
&quot;Custom Event&quot;,&quot;Events&quot;, 
&quot;Event Sponsorship (Custom)&quot;,&quot;Events&quot;, 
&quot;Education Event&quot;,&quot;Events&quot;, 
&quot;Event Sponsorship&quot;,&quot;Events&quot;, 
&quot;Event Sponsorship (Custom)&quot;,&quot;Events&quot;, 
&quot;Exhibitions Intercompany&quot;, &quot;Exhibitions&quot;, 
&quot;Paid Promo Allocation&quot;, &quot;Impressions/Branding&quot;, 
&quot;Direct Mail List&quot;, &quot;Impressions/Branding&quot;, 
&quot;Standard CPM&quot;, &quot;Impressions/Branding&quot;, 
&quot;Digital Subscription&quot;, &quot;Impressions/Branding&quot;, 
&quot;Directory Listing&quot;, &quot;Impressions/Branding&quot;, 
&quot;Events - Tradeshow&quot;,&quot;Events&quot;, 
&quot;Events - Branded&quot;,&quot;Events&quot;, 
&quot;Events - Corporate&quot;,&quot;Events&quot;, 
&quot;Back Copy Sales&quot;,&quot;Print&quot;, 
&quot; &quot; 
) 
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subcategory2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subcategory__c</fullName>
        <label>Product Subcategory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>This is a concatenation of the Product Name and marekt so that the Market displays on the Add Product to Opportunity window</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Allow Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per quote line</fullName>
                    <default>true</default>
                    <label>One per quote line</label>
                </value>
                <value>
                    <fullName>One per unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPricingField__c</fullName>
        <description>Field used to calculate block pricing.</description>
        <inlineHelpText>Field used to calculate block pricing.</inlineHelpText>
        <label>Block Pricing Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Component__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as a component, excluding it from selection in product lookup.</description>
        <inlineHelpText>Marks this product as a component, excluding it from selection in product lookup.</inlineHelpText>
        <label>Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity.</description>
        <inlineHelpText>Discount rate compounded by quantity.</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationEvent__c</fullName>
        <description>Specifies when user is prompted to configure this product.</description>
        <inlineHelpText>Use this to control when Configure Products screen shows up for this product. Choose &quot;Add&quot; to limit to initial configuration. Choose &quot;Edit&quot; to subsequent configuration.</inlineHelpText>
        <label>Configuration Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ConfigurationType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this product during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this product during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFields__c</fullName>
        <description>Additional fields collected during configuration of this product. All of these fields must exist on Product Option and Quote Line objects.</description>
        <label>Configuration Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFormTitle__c</fullName>
        <description>Title of the configuration form rendered from specified configuration fields.</description>
        <inlineHelpText>Title of the configuration form rendered from specified configuration fields.</inlineHelpText>
        <label>Configuration Form Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationType__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationValidator__c</fullName>
        <description>JavaScript function used to validate configuration of this product.</description>
        <inlineHelpText>JavaScript function used to validate configuration of this product.</inlineHelpText>
        <label>Configuration Validator</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredCodePattern__c</fullName>
        <description>Pattern used to generate product code (SKU) for configured products.</description>
        <inlineHelpText>Pattern used to generate product code (SKU) for configured products.</inlineHelpText>
        <label>Configured Code Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>